feat: P2 — 存储插件体系：SPI 接口 + 本地存储实现